# ie434-deepdive-g1

./: Data Exploration.ipynb  Data Extraction  Deep Learning.ipynb  FeatureImportance.ipynb  LICENSE  MITLicense.txt  README.md  Secondary_Railcar_Auction_Market_Bids_20250929.csv  best_model.pth  data.pkl  hyperparam_1_stats.pkl  main.py  minibatch_stats.pkl  pyproject.toml  shap_values.pkl
